[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/standard/player.png" type="Texture" id=1]
[ext_resource path="res://player/PlayerLowGraphics.gd" type="Script" id=2]
[ext_resource path="res://player/weapons/WhipLowGraphics.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/weapons/ForceFieldLowGraphics.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 37.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="PlayerLowGraphics" type="KinematicBody2D"]
z_index = 4096
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="ForceFieldLowGraphics" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.75 )
frames = SubResource( 2 )
animation = "move"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Whip1" parent="." instance=ExtResource( 3 )]

[node name="Whip2" parent="." instance=ExtResource( 3 )]
visible = false
begin = 180

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
